Рефакторинг api документация
На главную страницу добавлен тестовый аккаунт
